--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ scripts:
 deploy:
   provider: elasticbeanstalk
   region: "us-east-2"
-  app: ";docker-react"
+  app: "docker-react"
   env: "DockerReact-env"
   bucket_name: "elasticbeanstalk-us-east-2-251344250794"
   bucket_path: "docker-react"
